# crc32_xxhash3_benchmark

./: Cargo.toml  readme.md
benches/: benchmark.rs
