[package]
name = "crc32_xxhash3_benchmark"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
crc = "3.0.0"
crc32fast = { version = "1.3.2", features = ["nightly"] }
rand = { version = "0.8.5", features = [
  "nightly",
  "simd_support",
  "min_const_gen"
] }
twox-hash = "1.6.3"

[dev-dependencies]
criterion = "0.3.5"

[[bench]]
name = "benchmark"
harness = false
